  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005-08-04  Christian Stimming <stimming@tuhh.de>

	* src/os/windows/fslock.c: Update windows code to latest changes.

2005/08/04: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- more work on crypttoken
- removed some crypttoken flags
- added crypttoken flag GWEN_CRYPTTOKEN_FLAGS_FORCE_PIN_ENTRY
- added getpin flag GWEN_CRYPTTOKEN_GETPIN_FLAGS_ALLOW_DEFAULT


2005/08/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_KeySpec_toDb()
- added function GWEN_KeySpec_fromDb()
- fixed a bug in PluginDescr loading code
- fixed a bug in GWEN_Buffer_dup()
- added GWEN_CryptManager_CheckToken()
- added the command "checktoken" to gct-tool (checks whether a given token
  is supported by any plugin)
- added virtual function GWEN_CryptToken_GetTokenIdData()


2005-07-31  Christian Stimming  <stimming@tuhh.de>

	* gwenhywfar.spec.in: Move /etc/*.crt from -devel rpm to binary
	rpm. While missing, Pin/Tan connections were impossible.


2005/07/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_WAITCALLBACK:
  - added text field to waitcallback
  - added function/macro GWEN_WaitCallback_EnterWithText
  - fixed GWEN_WaitCallback: If any previously activated callback returns
    GWEN_WaitCallbackResult_Abort then all following callbacks will return
    this code as well. Also the condition of returning this code is stored.
  - introduced GWEN_WAITCALLBACK_ID_SIMPLE_PROGRESS
  - introduced GWEN_WAITCALLBACK_ID_FAST
  - introduced flags:
    - defined flag GWEN_WAITCALLBACK_FLAGS_NO_REUSE
  - defined depth level GWEN_WAITCALLBACK_LEVEL_REUSED
- replaced GWEN_BUFFEREDIO_CBID_IO with GWEN_WAITCALLBACK_ID_FAST