@@ -2,9 +2,15 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2005/08/05: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added extern "C" to crypttoken header files
+
+
 2005-08-04  Christian Stimming <stimming@tuhh.de>
 
 	* src/os/windows/fslock.c: Update windows code to latest changes.
+
 
 2005/08/04: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
